feat: 🚀 profile view

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,6 +1,6 @@
 {
   "onboarding": {
-    "message": "Welcome to obytes app site"
+    "message": "Welcome to eu-cloud app site"
   },
   "settings": {
     "about": "About",
