feat: profile view

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,6 +2,11 @@
   "onboarding": {
     "message": "Welcome to eu-cloud app site"
   },
+  "profile": {
+    "about": "About",
+    "feedback": "Feedback",
+    "help": "Help"
+  },
   "settings": {
     "about": "About",
     "app_name": "App Name",
